Fix overflow issue on thin resolutions

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ body, html {
     display: flex;
     align-items: center;
     flex-direction: column;
+    overflow-x: hidden;
     width: 100%;
     height: 100%;
 }
